--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hotel Website</title>
+    <title>Beacon Hotel Website</title>
     <link rel="stylesheet" href="CSS/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -54,11 +54,29 @@
 
   </section>
 
+  <section class="menu-section">
 
-    <main class="hotel">
-    
+    <div class="menu-text">
 
-    </main>
+    <h1>MENU</h1>
+
+  </div>
+
+  <div class="card" style="width: 20rem;">
+    <img src="/Assets/About-logo.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+
+  </section>
+
+
+
+    <main class="hotel"></main>
   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
