--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
 
   </section>
 
-
-
     <main class="hotel"></main>
   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+   <script src="/JS/index.js"></script>
   </body>
 </html>
