--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
     <h1>MENU</h1>
 
   </div>
-
+  
+ <div id="meals">
   <div class="card" style="width: 20rem;">
-    <img src="/Assets/About-logo.jpeg" class="card-img-top" alt="...">
+    <img src="/Assets/About-logo.jpeg" class="card-img-top " alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
+ </div>
 
 
   </section>
@@ -78,7 +80,6 @@
   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
    <script src="/JS/index.js"></script>
   </body>
 </html>
