--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <div class="container mt-5">
         <div class="row row-cols-xl gap-2" id="meals">
-          <div class="card" style="width: 20rem">
+          <div class="card" style="width: 320px; height: 310px;">
             <img
               src="/Assets/About-logo.jpeg"
               class="card-img-top mt-2"
@@ -72,7 +72,7 @@
               height="200"
             />
             <div class="card-body ">
-              
+
               <h5 class="card-title">Card title</h5>
               
               <a href="#" class="btn btn-primary">Go somewhere</a>
