about section creted

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </div>
     </header>
 
-    <section class="about-place">
-      <div class="about-logo">
+    <section class="place">
+      <div class="place-logo">
         <img src="/Assets/About-logo.jpeg" alt="" />
       </div>
       <div class="container">
@@ -43,7 +43,7 @@
           is always memorable. From personalized room services to exquisite food
           deliveries, we cater to your every need.
         </h2>
-        <img class="about-image" src="/Assets/About.jpg" alt="" />
+        <img class="place-image" src="/Assets/About.jpg" alt="" />
       </div>
     </section>
 
@@ -82,27 +82,11 @@
       </div>
     </section>
 
-    <section class="about-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h2>About Us</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
-            </p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-          <div class="col-md-6">
-            <img src="/Assets/About-logo.jpeg" alt="About Us" class="img-fluid">
-          </div>
-        </div>
-      </div>
+    <section class="about-container">
+
     </section>
 
-    <main class="hotel">
-      
-
-    </main>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/JS/index.js"></script>
