--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <div class="hotel-name">
           <h1>Beacon Hotel</h1>
         </div>
+        <div class="nav-bar">
+          <a href="#">HOME</a>
+          <a href="#">MENU</a>
+          <a href="#">ABOUT</a>
+          <a href="#">CONTACT</a>
+        </div>
       </div>
 
       <div class="lobby-content">
