--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
   <body>
 
     <header class="lobby">
+      <div class="nav-bar">
+        <nav>
+        <a href="#">HOME</a>
+        <a href="#">MENU</a>
+        <a href="#">ABOUT</a>
+        <a href="#">CONTACT</a>
+      </nav>
+      </div>
       <div class="logo">
         <img src="/Assets/logo.jpeg" alt="Hotel Logo" />
 
         <div class="hotel-name">
           <h1>Beacon Hotel</h1>
         </div>
-        <div class="nav-bar">
-          <a href="#">HOME</a>
-          <a href="#">MENU</a>
-          <a href="#">ABOUT</a>
-          <a href="#">CONTACT</a>
-        </div>
+       
       </div>
 
       <div class="lobby-content">
