--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header class="lobby">
       <div class="nav-bar">
-        <nav>
+        <nav class="nav-item">
         <a href="#">HOME</a>
         <a href="#">MENU</a>
         <a href="#">ABOUT</a>
