--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="nav-bar">
         <nav class="nav-item">
         <a href="#">HOME</a>
-        <a href="#">MENU</a>
-        <a href="#">ABOUT</a>
+        <a class="menu-link" href="#">MENU</a>
+        <a class="about-link" href="#">ABOUT</a>
         <a href="#">CONTACT</a>
       </nav>
       </div>
