--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <h1>Contact Us</h1>
       <div class="form-container">
         <h2>Talk To Us</h2>
-        <form action="#" method="post">
+        <form action="#">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
@@ -133,9 +133,6 @@
     </div>
 
     </section>
-
-
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/JS/index.js"></script>
